# ToAnywhereButHere

./: Cargo.toml  constants.py  game.py  main.py  t.txt  type_aliases.py  window.py
events/: event_handler.py  event_handlers.py
objects/: game_object.py  platform.py  player.py
src/: input.rs  main.rs
